// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarGroup renders correctly 1`] = `
<div
  style={
    Object {
      "backgroundColor": "white",
      "margin": "0.5em 0",
      "padding": "0.3em 0",
    }
  }
>
  <div
    style={
      Object {
        "color": "#999",
        "fontSize": "0.8em",
        "padding": "0.3em 1em",
        "textTransform": "uppercase",
      }
    }
  >
    Snapshot group name
  </div>
  one
  two
</div>
------------HTML PREVIEW---------------
<div style="background-color:white;margin:0.5em 0;padding:0.3em 0;">
  <div style="color:#999;font-size:0.8em;padding:0.3em 1em;text-transform:uppercase;">
    Snapshot group name
  </div>
  one
  two
</div>
`;

exports[`SidebarItem renders correctly 1`] = `
<div
  dataMockType="Link"
  id="one"
  style={
    Object {
      "alignItems": "center",
      "color": "currentColor",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "row",
      "padding": "0.3em 1em",
      "textDecoration": "none",
      "wordBreak": "break-word",
    }
  }
  to="some/url"
>
  <div
    style={
      Object {
        "color": "blue",
        "fontWeight": "bold",
      }
    }
  >
    Link
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "0 0 20px",
        "flex": "0 0 20px",
      }
    }
  >
    <i
      className="giu-icon fa fa-folder-o"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": 1,
        "flex": 1,
      }
    }
  >
    an/extremely/amazingly/ultra/hyper/really/very/long/label
     
  </div>
</div>
------------HTML PREVIEW---------------
<div
  dataMockType="Link"
  id="one"
  style="align-items:center;color:currentColor;cursor:pointer;display:flex;flex-direction:row;padding:0.3em 1em;text-decoration:none;word-break:break-word;"
  to="some/url"
>
  <div style="color:blue;font-weight:bold;">
    Link
  </div>
  <div style="-webkit-flex:0 0 20px;flex:0 0 20px;">
    <i
      class="giu-icon fa fa-folder-o"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
  <div style="-webkit-flex:1;flex:1;">
    an/extremely/amazingly/ultra/hyper/really/very/long/label
     
  </div>
</div>
`;

exports[`SidebarItem renders correctly when hovered 1`] = `
<div
  dataMockType="Link"
  id="two"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#e6e6e6",
      "color": "currentColor",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "row",
      "padding": "0.3em 1em",
      "textDecoration": "none",
      "wordBreak": "break-word",
    }
  }
  to="some/url"
>
  <div
    style={
      Object {
        "color": "blue",
        "fontWeight": "bold",
      }
    }
  >
    Link
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "0 0 20px",
        "flex": "0 0 20px",
      }
    }
  >
    <i
      className="giu-icon fa fa-folder-o"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": 1,
        "flex": 1,
      }
    }
  >
    two
     
  </div>
</div>
------------HTML PREVIEW---------------
<div
  dataMockType="Link"
  id="two"
  style="align-items:center;background-color:#e6e6e6;color:currentColor;cursor:pointer;display:flex;flex-direction:row;padding:0.3em 1em;text-decoration:none;word-break:break-word;"
  to="some/url"
>
  <div style="color:blue;font-weight:bold;">
    Link
  </div>
  <div style="-webkit-flex:0 0 20px;flex:0 0 20px;">
    <i
      class="giu-icon fa fa-folder-o"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
  <div style="-webkit-flex:1;flex:1;">
    two
     
  </div>
</div>
`;

exports[`SidebarItem renders correctly when selected & hovered 1`] = `
<div
  dataMockType="Link"
  id="four"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#9d3614",
      "color": "white",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "row",
      "padding": "0.3em 1em",
      "textDecoration": "none",
      "wordBreak": "break-word",
    }
  }
  to="some/url"
>
  <div
    style={
      Object {
        "color": "blue",
        "fontWeight": "bold",
      }
    }
  >
    Link
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "0 0 20px",
        "flex": "0 0 20px",
      }
    }
  >
    <i
      className="giu-icon fa fa-folder-o"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": 1,
        "flex": 1,
      }
    }
  >
    four
     
  </div>
</div>
------------HTML PREVIEW---------------
<div
  dataMockType="Link"
  id="four"
  style="align-items:center;background-color:#9d3614;color:white;cursor:pointer;display:flex;flex-direction:row;padding:0.3em 1em;text-decoration:none;word-break:break-word;"
  to="some/url"
>
  <div style="color:blue;font-weight:bold;">
    Link
  </div>
  <div style="-webkit-flex:0 0 20px;flex:0 0 20px;">
    <i
      class="giu-icon fa fa-folder-o"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
  <div style="-webkit-flex:1;flex:1;">
    four
     
  </div>
</div>
`;

exports[`SidebarItem renders correctly when selected 1`] = `
<div
  dataMockType="Link"
  id="three"
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ca461a",
      "color": "white",
      "cursor": "pointer",
      "display": "flex",
      "flexDirection": "row",
      "padding": "0.3em 1em",
      "textDecoration": "none",
      "wordBreak": "break-word",
    }
  }
  to="some/url"
>
  <div
    style={
      Object {
        "color": "blue",
        "fontWeight": "bold",
      }
    }
  >
    Link
  </div>
  <div
    style={
      Object {
        "WebkitFlex": "0 0 20px",
        "flex": "0 0 20px",
      }
    }
  >
    <i
      className="giu-icon fa fa-folder-o"
      style={
        Object {
          "color": undefined,
          "cursor": "pointer",
          "fontSize": undefined,
          "letterSpacing": "normal",
        }
      }
    />
  </div>
  <div
    style={
      Object {
        "WebkitFlex": 1,
        "flex": 1,
      }
    }
  >
    three
     
  </div>
</div>
------------HTML PREVIEW---------------
<div
  dataMockType="Link"
  id="three"
  style="align-items:center;background-color:#ca461a;color:white;cursor:pointer;display:flex;flex-direction:row;padding:0.3em 1em;text-decoration:none;word-break:break-word;"
  to="some/url"
>
  <div style="color:blue;font-weight:bold;">
    Link
  </div>
  <div style="-webkit-flex:0 0 20px;flex:0 0 20px;">
    <i
      class="giu-icon fa fa-folder-o"
      style="cursor:pointer;letter-spacing:normal;"
    >
    </i>
  </div>
  <div style="-webkit-flex:1;flex:1;">
    three
     
  </div>
</div>
`;
